# tldr_tune

./: .gitignore  README.md  SETUP.md  inference.py  judge.py  judge_vllm.py  llama3_1_8B_instruct_lora.yaml  llama3_1_8B_lora_single_device.yaml  llama3_1_8B_lora_vova.yaml  main.py  prompts.py  pyproject.toml  save_tldr.py
samples/: base_20samples.jsonl  judge_20samples.jsonl  judge_results_stats.json  lora_20samples.jsonl  train10samples.jsonl
