[project]
name = "tldr-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "peft>=0.18.0",
    "safetensors>=0.7.0",
    "tiktoken>=0.12.0",
    "torch==2.8.0",
    "torchao==0.13.0",
    "torchaudio==2.8.0",
    "torchtune>=0.6.1",
    "torchvision==0.23.0",
    "transformers>=4.57.1",
    "wandb>=0.23.0",
]
