[project]
name = "tldr-tune"
version = "0.1.0"
description = "TL;DR summarization fine-tuning pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "safetensors>=0.7.0",
    "tiktoken>=0.12.0",
    "torch==2.8.0",
    "torchao==0.13.0",
    "torchtune>=0.6.1",
    "transformers>=4.57.1",
    "vllm>=0.6.0",
    "wandb>=0.23.0",
]
